# PyGALAX

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: draft-pdf.yml
Notebooks/: Classification_311Request.ipynb  Regression_311Request.ipynb
PyGALAX/: __init__.py  bandwidth.py  kernel.py  model.py  results.py
data/: 311Request.csv  311Request_class.csv
data/buffalo/: buffalo.dbf  buffalo.sbn  buffalo.sbx  buffalo.shp  buffalo.shp.xml  buffalo.shx
paper/: paper.bib  paper.md
tests/: test_bandwidth.py  test_kernel.py  test_model.py  test_results.py
