[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyGALAX"
description = "Geospatial Analysis Leveraging AutoML and eXplainable AI"
keywords = ["geographically weighted regression", "explainable AI", "AutoML", "SHAP", "spatial analysis"]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Pingping Wang" }]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scikit-learn>=1.6.1",
  "scipy>=1.9",
  "joblib>=1.2",
  "shap>=0.47.2",
  "flaml[automl]>=2.3.4",
  "libpysal>=4.7",
  "esda>=2.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["PyGALAX"]
exclude = ["tests*", "data*", "Notebooks*"]

[tool.setuptools.dynamic]
version = {attr = "PyGALAX.__version__"}

[project.urls]
Homepage = "https://github.com/Pingping9/GALAX"
Issues = "https://github.com/Pingping9/GALAX/issues"
